--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "swordjs",
   "version": "0.1.8",
   "description": "swordjs - access modules from crosswire.org/sword in JS",
-  "main": "scripts/sword.js",
+  "main": "src/sword.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/zefanja/swordjs"
@@ -23,12 +23,12 @@
   },
   "homepage": "https://github.com/zefanja/swordjs",
   "dependencies": {
-    "async": "~0.9.0",
+    "async": "^0.9.2",
     "bible-passage-reference-parser": "^2.0.1",
     "idb-wrapper": "~1.4.1",
     "jszip": "~2.4.0",
     "object-assign": "~2.0.0",
-    "pako": "~0.2.5",
+    "pako": "^0.2.9",
     "sax": "~0.6.1"
   },
   "devDependencies": {
