--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
   "dependencies": {
     "async": "^0.9.2",
     "bible-passage-reference-parser": "^2.0.1",
+    "buffer": "^5.2.0",
+    "events": "^3.0.0",
     "idb-wrapper": "~1.4.1",
     "jszip": "~2.4.0",
     "object-assign": "~2.0.0",
     "pako": "^0.2.9",
-    "sax": "~0.6.1"
+    "sax": "~0.6.1",
+    "timers": "^0.1.1",
+    "xmlbuilder": "^10.0.0"
   },
   "devDependencies": {
     "browser-sync": "^1.6.2",
