--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "swordjs",
   "version": "0.1.8",
   "description": "swordjs - access modules from crosswire.org/sword in JS",
-  "main": "src/sword.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/zefanja/swordjs"
