--- a/package.json
+++ b/package.json
@@ -22,35 +22,15 @@
   "dependencies": {
     "async": "^0.9.2",
     "bible-passage-reference-parser": "^2.0.1",
+    "blob": "0.0.4",
     "buffer": "^5.2.0",
     "events": "^3.0.0",
     "filereader": "^0.10.3",
-    "idb-wrapper": "~1.4.1",
     "jszip": "~2.4.0",
-    "object-assign": "~2.0.0",
     "pako": "^0.2.9",
     "sax": "~0.6.1",
     "timers": "^0.1.1",
     "xmlbuilder": "^10.0.0"
   },
-  "devDependencies": {
-    "browser-sync": "^1.6.2",
-    "browserify": "^6.2.0",
-    "del": "^0.1.3",
-    "exports-loader": "^0.6.2",
-    "gulp": "^3.8.9",
-    "gulp-autoprefixer": "1.0.1",
-    "gulp-changed": "^1.0.0",
-    "gulp-concat": "~2.4.2",
-    "gulp-csso": "^0.2.9",
-    "gulp-notify": "^2.0.0",
-    "gulp-uglify": "^1.0.1",
-    "json-loader": "^0.5.1",
-    "superagent": "^0.20.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.1.0",
-    "webpack": "^1.7.3",
-    "webpack-dev-server": "^1.14.1"
-  }
+  "devDependencies": {}
 }
