--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "sword module"
   ],
   "author": "danbennett <danielbennett@gmx.com>",
-  "license": "GPL",
+  "license": "GPL-3.0-only",
   "dependencies": {
     "async": "^0.9.2",
     "babel-eslint": "^8.2.6",
@@ -22,8 +22,12 @@
     "blob": "0.0.4",
     "buffer": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-jsdoc": "^3.7.1",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "events": "^3.0.0",
     "filereader": "^0.10.3",
+    "jsdoc": "^3.5.5",
     "jszip": "~2.4.0",
     "pako": "^0.2.9",
     "sax": "~0.6.1",
