--- a/package.json
+++ b/package.json
@@ -16,24 +16,23 @@
   "author": "danbennett <danielbennett@gmx.com>",
   "license": "GPL-3.0-only",
   "dependencies": {
-    "async": "^0.9.2",
-    "babel-eslint": "^8.2.6",
     "bible-passage-reference-parser": "^2.0.1",
-    "buffer": "^5.2.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0",
-    "events": "^3.0.0",
-    "jsdoc": "^3.5.5",
+    "fast-xml-parser": "^3.12.0",
+    "he": "^1.1.1",
     "jszip": "~2.4.0",
     "pako": "^0.2.9",
-    "sax": "~0.6.1",
-    "timers": "^0.1.1",
-    "xmlbuilder": "^10.0.0"
+    "sax": "^1.2.4",
+    "stream": "^0.0.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.13.0"
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
+    "jsdoc": "^3.5.5",
+    "xml-formatter": "^1.0.1"
   }
 }
