--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "danbennett <danielbennett@gmx.com>",
   "license": "GPL-3.0-only",
   "dependencies": {
+    "base64-js": "^1.3.0",
     "bible-passage-reference-parser": "^2.0.1",
     "fast-xml-parser": "^3.12.0",
     "he": "^1.1.1",
