--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
   "name": "sword2json",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "a JSON interface for Sword Bible modules",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/danbenn/sword2json"
   },
-  "keywords": [
-    "sword2json",
-    "swordjs",
-    "bible",
-    "sword module"
-  ],
   "author": "danbennett <danielbennett@gmx.com>",
-  "license": "GPL-3.0-only",
+  "license": "MIT",
   "dependencies": {
     "base64-js": "^1.3.0",
     "bible-passage-reference-parser": "^2.0.1",
-    "fast-xml-parser": "^3.12.0",
-    "he": "^1.1.1",
     "jszip": "~2.4.0",
     "pako": "^0.2.9",
     "sax": "^1.2.4",
+    "sqlite": "^3.0.0",
     "stream": "^0.0.2"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0",
+    "@types/node": "^10.11.3",
+    "jest": "^23.6.0",
     "jsdoc": "^3.5.5",
-    "xml-formatter": "^1.0.1"
+    "ts-jest": "^23.10.3",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.1",
+    "xml-formatter": "^1.0.1",
+    "tslint-config-airbnb": "^5.11.0"
+  },
+  "scripts": {
+    "run": "./node_modules/ts-node/dist/bin.js",
+    "build": "rm -rf ./dist/ && ./node_modules/.bin/tsc",
+    "test": "./node_modules/jest/bin/jest.js",
+    "lint": "./node_modules/tslint/bin/tslint --fix -c tslint.json 'src/**/*.{ts,tsx}'",
+    "pretest": "npm run lint"
   }
 }
