--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sword2json",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "a JSON interface for Sword Bible modules",
   "main": "dist/index.js",
   "repository": {
@@ -9,32 +9,36 @@
   },
   "author": "danbennett <danielbennett@gmx.com>",
   "license": "MIT",
-  "files": ["dist/*"],
+  "files": [
+    "dist/*"
+  ],
   "dependencies": {
+    "@types/jest": "^23.3.5",
     "base64-js": "^1.3.0",
     "bible-passage-reference-parser": "^2.0.1",
+    "global": "^4.3.2",
     "jszip": "~2.4.0",
-    "pako": "^0.2.9",
-    "sax": "^1.2.4",
-    "sqlite": "^3.0.0",
-    "stream": "^0.0.2"
+    "lerna": "^3.4.3",
+    "npx": "^10.2.0",
+    "pako": "^0.2.9"
   },
   "devDependencies": {
     "@types/node": "^10.11.3",
     "jest": "^23.6.0",
     "jsdoc": "^3.5.5",
+    "sqlite": "^3.0.0",
     "ts-jest": "^23.10.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.11.0",
     "typescript": "^3.1.1",
-    "xml-formatter": "^1.0.1",
-    "tslint-config-airbnb": "^5.11.0"
+    "xml-formatter": "^1.0.1"
   },
   "scripts": {
     "run": "./node_modules/ts-node/dist/bin.js",
     "build": "rm -rf ./dist/ && ./node_modules/.bin/tsc",
     "test": "./node_modules/jest/bin/jest.js",
     "lint": "./node_modules/tslint/bin/tslint --fix -c tslint.json 'src/**/*.{ts,tsx}'",
-    "pretest": "npm run lint"
+    "prepublish": "npm run lint"
   }
 }
