--- a/src/osis2json/tsconfig.json
+++ b/src/osis2json/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "extends": "../../tsconfig.settings.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "lib",
     "rootDir": "src"
-  },
-  "references": []
+  }
 }
