--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sword2json",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "a JSON interface for Sword Bible modules",
   "main": "lib/index.js",
   "repository": {
@@ -15,7 +15,6 @@
   "dependencies": {
     "@types/jest": "^23.3.5",
     "base64-js": "^1.3.0",
-    "bible-passage-reference-parser": "^2.0.1",
     "global": "^4.3.2",
     "jszip": "~2.4.0",
     "lerna": "^3.4.3",
@@ -40,7 +39,7 @@
     "build:sword2osis": "npx tsc -p src/sword2osis/tsconfig.json",
     "lint:osis2json": "./node_modules/tslint/bin/tslint -c tslint.json --fix 'src/osis2json/src/*.ts'",
     "lint:sword2osis": "./node_modules/tslint/bin/tslint -c tslint.json --fix 'src/sword2osis/src/*.ts'",
-    "test": "./node_modules/jest/bin/jest.js",
-    "prepublish": "npm run lint"
+    "test:osis2json": "./node_modules/jest/bin/jest.js src/osis2json/tests/*",
+    "prepublish": "yarn lint:osis2json && yarn build:osis2json"
   }
 }
