--- a/src/osis2sqlite/package.json
+++ b/src/osis2sqlite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sword2osis",
+  "name": "osis2json",
   "version": "0.1.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -10,8 +10,6 @@
   "dependencies": {
     "bible-passage-reference-parser": "^2.0.1",
     "sax": "^1.2.4",
-    "sqlite": "^3.0.0",
-    "stream": "^0.0.2",
-    "osis2json": "^0.1.0"
+    "stream": "^0.0.2"
   }
 }
