--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@types/node": "^10.11.3",
     "jest": "^23.6.0",
-    "jsdoc": "^3.5.5",
+    "prettier": "^1.14.3",
     "sqlite": "^3.0.0",
     "ts-jest": "^23.10.3",
     "ts-node": "^7.0.1",
