--- a/src/sqlBible/package.json
+++ b/src/sqlBible/package.json
@@ -8,7 +8,9 @@
   },
   "devDependencies": {
     "random-words": "^1.1.0",
+    "rxjs-tslint-rules": "^4.12.0",
     "sqlite3": "^4.0.3",
-    "ts-node": "^7.0.1"
+    "ts-node": "^7.0.1",
+    "tslint-eslint-rules": "^5.4.0"
   }
 }
